// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey certified and readOnly to false 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          certified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          certified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
                <div
                  class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
                >
                  <button
                    aria-label="removeGroupAriaLabel"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d159sf-MuiSvgIcon-root"
                      data-testid="ClearIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      >
                        <button
                          aria-label="removeAttributeAriaLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium css-1jo1f9u-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="RemoveCircleOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":r0:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":r1:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":r1:"
                                  class="MuiAccordion-region"
                                  id=":r0:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                  addBtn
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              attributesAddBtn
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey certified and readOnly to true 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          certified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          certified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      />
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":r6:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":r7:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":r7:"
                                  class="MuiAccordion-region"
                                  id=":r6:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              attributesAddBtn
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey declared and readOnly to false 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          declared.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          declared.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
                <div
                  class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
                >
                  <button
                    aria-label="removeGroupAriaLabel"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d159sf-MuiSvgIcon-root"
                      data-testid="ClearIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      >
                        <button
                          aria-label="removeAttributeAriaLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium css-1jo1f9u-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="RemoveCircleOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":r4:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":r5:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":r5:"
                                  class="MuiAccordion-region"
                                  id=":r4:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                  addBtn
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              attributesAddBtn
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              attributesCreateBtn
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey declared and readOnly to true 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          declared.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          declared.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      />
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":ra:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":rb:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":rb:"
                                  class="MuiAccordion-region"
                                  id=":ra:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              attributesAddBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              attributesCreateBtn
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey verified and readOnly to false 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          verified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          verified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
                <div
                  class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
                >
                  <button
                    aria-label="removeGroupAriaLabel"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d159sf-MuiSvgIcon-root"
                      data-testid="ClearIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      >
                        <button
                          aria-label="removeAttributeAriaLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium css-1jo1f9u-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="RemoveCircleOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":r2:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":r3:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":r3:"
                                  class="MuiAccordion-region"
                                  id=":r2:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                  addBtn
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              attributesAddBtn
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              attributesCreateBtn
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey verified and readOnly to true 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1p6ecov-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
        >
          verified.label
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          verified.description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
                  >
                    read.provider
                  </span>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
              >
                <ul
                  class="css-1hy9l9p-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <div
                        class="css-1yo1jo6-MuiStack-root"
                      />
                      <div
                        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-xr63ld-MuiPaper-root-MuiCard-root"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1byhwgv-MuiPaper-root-MuiAccordion-root"
                        >
                          <div
                            aria-controls=":r8:"
                            aria-expanded="false"
                            class="MuiButtonBase-root MuiAccordionSummary-root css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root"
                            id=":r9:"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-1qqynwt-MuiTypography-root"
                              >
                                Attribute Name
                              </p>
                            </div>
                            <div
                              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                data-testid="ExpandMoreIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                            style="min-height: 0px;"
                          >
                            <div
                              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                            >
                              <div
                                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                              >
                                <div
                                  aria-labelledby=":r9:"
                                  class="MuiAccordion-region"
                                  id=":r8:"
                                  role="region"
                                >
                                  <div
                                    class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              attributesAddBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ugwy04-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              attributesCreateBtn
            </button>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
